Update Content and Fix footer alignment. Move mobile-responsive.css to Style directory

--- a/Style/760-image setting.css
+++ b/Style/760-image setting.css
@@ -617,10 +617,12 @@
 		overflow-x: hidden;
 		width: 100%;
 	}
+	/*
 	.start-right-away {
 		margin-top: 20px;
 		margin-left: 10px;
 	}
+	*/
 	..mobile-seting {
 		float: right;
 		max-width: 130px;
@@ -629,7 +631,7 @@
 		display: inline-block;
 	}
 	.input {
-		max-width: 130px;
+		max-width: 170px;
 		float: left;
 		margin-left: 20px;
 		color: #000;
