--- a/Style/image+setting.css
+++ b/Style/image+setting.css
@@ -58,12 +58,12 @@
 	.start-right-away {
 		width: 100%;
 		height: auto;
-		max-width: 386px;
+		max-width: 335px;
 		/*display: inline-block;*/
 		background-color: #fff;
 		opacity: 0.86;
 		text-align: right;
-		margin: 5%;
+		margin-left: 5%;
 		/*float: right;*/
 		float:left;
 		clear:left;
@@ -72,9 +72,9 @@
 	.image-box {
 		width: 100%;
 		height: auto;
-		min-height: 230px;
+		min-height: 250px;
 		background-size: 100% 80%;
-		max-width: 360px;
+		max-width: 335px;
 		margin-left:5%;
 		/*display: inline-block;*/
 		float: left;
@@ -89,7 +89,7 @@
 		width: 100%;
 		background-color: #efefef;
 		border: 1.5px #a2a2a2 solid;
-		min-height: 28px;
+		min-height: 24px;
 	}
 }
 @media only screen and (max-width: 340px) {
